pluma_parser/tests/snapshots/parse_success__match_pattern_same_line.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "match thing when 1 => \"one\" when 2 => \"two\" when _ => \"idk\""
---

=== Source ===
match thing when 1 => "one" when 2 => "two" when _ => "idk"

=== Comments ===
{}

=== AST ===
Module(0, 58) [
    TopLevelStatement(0, 58) Expr(
        ExprNode {
            pos: (
                0,
                58,
            ),
            kind: Match {
                match_: MatchNode {
                    pos: (
                        0,
                        58,
                    ),
                    subject: ExprNode {
                        pos: (
                            6,
                            11,
                        ),
                        kind: Identifier {
                            ident: Ident(6, 11) "thing",
                        },
                        typ: Unknown,
                    },
                    cases: [
                        MatchCaseNode {
                            pos: (
                                12,
                                26,
                            ),
                            pattern: Pattern(17, 18) Literal(Literal(17, 18) IntDecimal(1)),
                            body: ExprNode {
                                pos: (
                                    23,
                                    26,
                                ),
                                kind: Literal {
                                    literal: Literal(23, 26) Str("one"),
                                },
                                typ: Unknown,
                            },
                        },
                        MatchCaseNode {
                            pos: (
                                28,
                                42,
                            ),
                            pattern: Pattern(33, 34) Literal(Literal(33, 34) IntDecimal(2)),
                            body: ExprNode {
                                pos: (
                                    39,
                                    42,
                                ),
                                kind: Literal {
                                    literal: Literal(39, 42) Str("two"),
                                },
                                typ: Unknown,
                            },
                        },
                        MatchCaseNode {
                            pos: (
                                44,
                                58,
                            ),
                            pattern: Pattern(49, 50) Underscore,
                            body: ExprNode {
                                pos: (
                                    55,
                                    58,
                                ),
                                kind: Literal {
                                    literal: Literal(55, 58) Str("idk"),
                                },
                                typ: Unknown,
                            },
                        },
                    ],
                },
            },
            typ: Unknown,
        },
    ),
]

