pluma_parser/tests/snapshots/parse_success__regex_alternations.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "/\"a\" | \"b\" | \"c\"/"
---

=== Source ===
/"a" | "b" | "c"/

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        17,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                17,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        17,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                2,
                                15,
                            ),
                            kind: Alternation(
                                [
                                    RegExprNode {
                                        pos: (
                                            2,
                                            3,
                                        ),
                                        kind: Literal(
                                            "a",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            8,
                                            9,
                                        ),
                                        kind: Literal(
                                            "b",
                                        ),
                                    },
                                    RegExprNode {
                                        pos: (
                                            14,
                                            15,
                                        ),
                                        kind: Literal(
                                            "c",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

