pluma_parser/tests/snapshots/parse_success__tuple_weirdly_spaced_across_lines.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "(\n    1,\n  2\n\n        )"
---

=== Source ===
(
    1,
  2

        )

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        23,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                23,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        23,
                    ),
                    kind: UnlabeledTuple(
                        [
                            ExprNode {
                                pos: (
                                    6,
                                    7,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            6,
                                            7,
                                        ),
                                        kind: IntDecimal(
                                            1,
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                            ExprNode {
                                pos: (
                                    11,
                                    12,
                                ),
                                kind: Literal(
                                    LiteralNode {
                                        pos: (
                                            11,
                                            12,
                                        ),
                                        kind: IntDecimal(
                                            2,
                                        ),
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

