pluma_parser/tests/snapshots/parse_success__type_assertion_complex.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "f :: { Int -> { () -> (Bool, Int) } }"
---

=== Source ===
f :: { Int -> { () -> (Bool, Int) } }

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        37,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                37,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        37,
                    ),
                    kind: TypeAssertion {
                        expr: ExprNode {
                            pos: (
                                0,
                                1,
                            ),
                            kind: Identifier(
                                IdentifierNode {
                                    pos: (
                                        0,
                                        1,
                                    ),
                                    name: "f",
                                },
                            ),
                            typ: Unknown,
                        },
                        asserted_type: TypeExprNode {
                            pos: (
                                5,
                                37,
                            ),
                            kind: Func(
                                TypeExprNode {
                                    pos: (
                                        7,
                                        10,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                7,
                                                10,
                                            ),
                                            name: "Int",
                                            generics: [],
                                            constraints: None,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                                TypeExprNode {
                                    pos: (
                                        14,
                                        35,
                                    ),
                                    kind: Func(
                                        TypeExprNode {
                                            pos: (
                                                16,
                                                18,
                                            ),
                                            kind: EmptyTuple,
                                            typ: Unknown,
                                        },
                                        TypeExprNode {
                                            pos: (
                                                22,
                                                33,
                                            ),
                                            kind: UnlabeledTuple(
                                                [
                                                    TypeExprNode {
                                                        pos: (
                                                            23,
                                                            27,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    23,
                                                                    27,
                                                                ),
                                                                name: "Bool",
                                                                generics: [],
                                                                constraints: None,
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                    TypeExprNode {
                                                        pos: (
                                                            29,
                                                            32,
                                                        ),
                                                        kind: Single(
                                                            TypeIdentifierNode {
                                                                pos: (
                                                                    29,
                                                                    32,
                                                                ),
                                                                name: "Int",
                                                                generics: [],
                                                                constraints: None,
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    typ: Unknown,
                },
            ),
        },
    ],
}

