pluma_parser/tests/snapshots/parse_success__type_struct_generic_constraints.snap
---
source: pluma_parser/tests/parse_success.rs
expression: "struct Thing<A, B> where A :: Any, B :: Comparable (\n  first :: A,\n  second :: B,\n  third :: Int\n)"
---

=== Source ===
struct Thing<A, B> where A :: Any, B :: Comparable (
  first :: A,
  second :: B,
  third :: Int
)

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        98,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                98,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        98,
                    ),
                    kind: Struct {
                        fields: [
                            (
                                IdentifierNode {
                                    pos: (
                                        55,
                                        60,
                                    ),
                                    name: "first",
                                },
                                TypeExprNode {
                                    pos: (
                                        64,
                                        65,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                64,
                                                65,
                                            ),
                                            name: "A",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        69,
                                        75,
                                    ),
                                    name: "second",
                                },
                                TypeExprNode {
                                    pos: (
                                        79,
                                        80,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                79,
                                                80,
                                            ),
                                            name: "B",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            (
                                IdentifierNode {
                                    pos: (
                                        84,
                                        89,
                                    ),
                                    name: "third",
                                },
                                TypeExprNode {
                                    pos: (
                                        93,
                                        96,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                93,
                                                96,
                                            ),
                                            name: "Int",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                        ],
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            7,
                            18,
                        ),
                        name: "Thing",
                        generics: [
                            TypeExprNode {
                                pos: (
                                    13,
                                    14,
                                ),
                                kind: Single(
                                    TypeIdentifierNode {
                                        pos: (
                                            13,
                                            14,
                                        ),
                                        name: "A",
                                        generics: [],
                                    },
                                ),
                                typ: Unknown,
                            },
                            TypeExprNode {
                                pos: (
                                    16,
                                    17,
                                ),
                                kind: Single(
                                    TypeIdentifierNode {
                                        pos: (
                                            16,
                                            17,
                                        ),
                                        name: "B",
                                        generics: [],
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    },
                    generic_type_constraints: [
                        (
                            IdentifierNode {
                                pos: (
                                    25,
                                    26,
                                ),
                                name: "A",
                            },
                            TypeIdentifierNode {
                                pos: (
                                    30,
                                    33,
                                ),
                                name: "Any",
                                generics: [],
                            },
                        ),
                        (
                            IdentifierNode {
                                pos: (
                                    35,
                                    36,
                                ),
                                name: "B",
                            },
                            TypeIdentifierNode {
                                pos: (
                                    40,
                                    50,
                                ),
                                name: "Comparable",
                                generics: [],
                            },
                        ),
                    ],
                },
            ),
        },
    ],
}

